# fakebank

./: .env.ci  .gitignore  Dockerfile  Dockerfile.processor  LICENSE  Makefile  README.md  conftest.py  consumers.py  docker-compose-test.yaml  docker-compose.yaml  entrypoint.sh  go.mod  go.sum  main.go  pyproject.toml  transaction_entrypoint.sh
accounts/: controller.go  models.go  services.go
alembic/: env.py
alembic/versions/: 0b55c3cc0f04_add_created_and_status_cols_to_.py  36d8e5488129_add_notification_model.py  631b12cc6419_add_transaction_model.py  a8e6b2985249_add_user_model.py  aa33233d2848_add_account_model.py  c80f15e33999_add_user_model.py  d217c93b97a1_add_models.py  d81573c785bf_add_models.py  e98d0256b52f_add_account_and_trans_models.py
app/: main.py
app/accounts/: controllers.py  crud.py  models.py  schemas.py
app/core/: config.py  deconstructor.py  exceptions.py  service.py  websockets.py
app/db/: crud.py  postgres.py  redis.py
app/notifications/: controllers.py  crud.py  models.py  (+1 more)
auth/: claims.go  controller.go  middleware.go  services.go  tokens.go
client/: Dockerfile.nuxt  nuxt.config.ts  package.json
config/: config.go
db/: db.go
docs/: docs.go  swagger.json  swagger.yaml
errors/: http.go
migrations/: 0001_add_users_table.sql  0002_add_accounts_table.sql  0003_add_transaction_table.sql
nginx/: nginx.conf
server/: router.go  server.go
tests/: test_auth.py
transactions/: controller.go  db.go  models.go  services.go
users/: auth.go  controller.go  db.go  models.go  models_test.go  services.go
utils/: pagination.go
(+596 files in other folders)
